package me.clementino.v1.acompanhamentos;

public class LeiteEmPo {
    private final double preco;

    public LeiteEmPo() {
        preco = 1.99;
    }

    public double getPreco() {
        return preco;
    }
}
