package me.clementino.v1.acompanhamentos;

public class Morango {
    private final double preco;

    public Morango() {
        preco = 4.99;
    }

    public double getPreco() {
        return preco;
    }
}
